Fix: Fixed horizontal scroll on contact form

--- a/Style/contact.css
+++ b/Style/contact.css
@@ -10,11 +10,6 @@ header {
     margin-top: 3%;
 }
 
-.form__container{
-    margin-right: -15px;
-    margin-left: -15px;
-}
-
 .form__content{
     padding-right: 15px;
     padding-left: 15px;
